# RFID-ESP32

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/embed-ros/: CMakeLists.txt  TfSource.cpp  poseTracker.cpp  tfPub.cpp  urosHandler.cpp
components/embed-ros/include/: TfSource.hpp  jointStatePub.cpp  jointStatePub.hpp  poseTracker.hpp  tfPub.hpp  urosElement.cpp  urosElement.hpp  urosHandler.hpp
main/: CMakeLists.txt  main.cpp  rc522.cpp  rfid_pub.cpp
main/include/: rc522.hpp  rfid_pub.hpp
